--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,3 +34,107 @@
     -webkit-background-clip: text;
     animation: gradientAnimation 6s ease infinite;
 }
+
+html,
+body {
+    overflow-x: hidden;
+}
+
+.homepage_bg {
+    background: url("../src/assets/Images/bghome.svg");
+}
+
+.spinner {
+    width: 48px;
+    height: 48px;
+    position: relative;
+    perspective: 500px;
+}
+
+.spinner:before,
+.spinner:after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 24px;
+    height: 48px;
+    background: #FF3D00;
+    border-radius: 0 24px 24px 0;
+    transform-origin: 0 0;
+    animation: flip 2s linear infinite alternate;
+}
+
+.spinner:after {
+    left: 0;
+    border-radius: 24px 0 0 24px;
+    transform-origin: 100% 0;
+    animation-delay: 1s;
+}
+
+@keyframes flip {
+
+    0%,
+    10% {
+        transform: rotateY(0deg)
+    }
+
+    90%,
+    100% {
+        transform: rotateY(-180deg)
+    }
+}
+
+.lable-style {
+    @apply text-[14px] text-richblack-5;
+}
+
+.light-lable-style {
+    @apply text-[14px] text-richblack-800;
+}
+
+
+.form-style {
+    @apply rounded-lg bg-richblack-700 p-3 text-[16px] leading-[24px] text-richblack-5 shadow-[0_1px_0_0] shadow-white/50 placeholder:text-richblack-400 focus:outline-none;
+}
+
+.light-form-style {
+    @apply rounded-lg bg-blue-5 p-3 text-[16px] leading-[24px] text-black shadow-[0_1px_0_0] shadow-white/50 placeholder:text-richblack-200 focus:outline-none;
+}
+
+.section_heading {
+    @apply text-2xl font-bold text-richblack-5 lg:text-4xl;
+}
+
+.light_section_heading {
+    @apply text-2xl font-bold text-richblack-600 lg:text-4xl;
+}
+
+.blackButton {
+    @apply cursor-pointer rounded-md bg-richblack-800 px-[20px] py-[8px] font-semibold text-richblack-5;
+}
+
+.yellowButton {
+    @apply cursor-pointer rounded-md bg-yellow-50 px-[20px] py-[8px] font-semibold text-richblack-900;
+}
+
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid;
+    border-color: #FF3D00 transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
